[package]
name = "dfsnode"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
hyper-staticfile = "0.10"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls-native-roots",
    "http2",
    "stream",
    "charset",
], default-features = false }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde-querystring = "0.3.0"
bytes = "1.10.1"
futures-util = "0.3.31"
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"
radix_trie = "0.2"
arc-swap = "1.7"
moka = { version = "0.12", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
librqbit = { git = "https://github.com/ikatson/rqbit.git", tag = "v9.0.0-beta.1", default-features = false, features = [
    "rust-tls",
] }
serde_json = "1.0.140"
dav-server = { version = "0.8.0", features = ["hyper"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
